--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
           <input type="text" id="animal-input">
           <br>
     
-          <!-- Button triggers new movie to be added -->
+          <!-- Button triggers new animal to be added -->
           <input id="add-animal" type="submit" value="Add an  Animal">
         </form>
     
 
 
-    </div>
+   
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -41,5 +41,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
     <script src="./assets/javascript/app.js" type="text/javascript"></script>
+  </div>
   </body>
 </html>
